tests/bad/testfile-duplicate-funs.go
package main

func foo () {}
func foo () {}

func main () {}
